--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
         <footer class="todo-jekicker-footer text-center footer w-100">
           <div class="row justify-content-center contact-container no-gutters text-left px-3 px-md-0">
-          <!--
+
             <div class="col-md-12 py-3 px-3 mx-auto">
               <p>This web site is provided for the exclusive use of the clients and limited partners of Pup Bestie, and requires a username and password. If you have not been expressly authorized by Pup Bestie please do not attempt to access this site. If you are a client and do not have a password, please contact Pup Bestie by email at info@falcatacap.com.</p>
 
@@ -167,16 +167,25 @@
 
             <div class="col-md-4 push-md-6 email-label py-3">
               <p class="label-title email-label-title">Email</p>
-              <p class="mb-0"><a href="mailto:info@falcatacap.com">info@falcatacap.com</a></p>
+              <p class="mb-0"><a href="mailto:info@pupbestie.com">info@pupbestie.com</a></p>
             </div>
 
             <div class="d-sm-up separator-label"></div>
 
             <div class="col-md-4 pull-md-6 office-label py-3">
-              <p class="label-title office-label-title">Office</p>
-              <p class="mb-0">New York, NY</p>
+               <p class="label-title office-label-title">Service Areas</p>
+               <p class="mb-0">Miami Beach, FL</p>
+               <p class="mb-0">South Beach</p>
+               <p class="mb-0">Sunset Harbor</p>
+               <p class="mb-0">South of Fifth</p>
+               <p class="mb-0">Mid Beach</p>
+               <p class="mb-0">Miami, FL</p>
+               <p class="mb-0">Edgewater</p>
+               <p class="mb-0">Brickell</p>
+               <p class="mb-0">Downtown Miami</p>
+               <p class="mb-0">Miami Design District</p>
             </div>
-            -->
+
 
           </div>
 
