--- a/index.html
+++ b/index.html
@@ -149,16 +149,18 @@
 
             <div class="col-md-4 pull-md-6 office-label py-3">
                <p class="label-title office-label-title">Service Areas</p>
-               <p class="mb-0">Miami Beach, FL</p>
-               <p class="mb-0">South Beach</p>
-               <p class="mb-0">Sunset Harbor</p>
-               <p class="mb-0">South of Fifth</p>
-               <p class="mb-0">Mid Beach</p>
-               <p class="mb-0">Miami, FL</p>
-               <p class="mb-0">Edgewater</p>
-               <p class="mb-0">Brickell</p>
-               <p class="mb-0">Downtown Miami</p>
-               <p class="mb-0">Miami Design District</p>
+               <ul class="list-unstyled d-flex">
+                  <li class="mb-0 col">Miami Beach, FL</li>
+                  <li class="mb-0 col">South Beach</li>
+                  <li class="mb-0 col">Sunset Harbor</li>
+                  <li class="mb-0 col">South of Fifth</li>
+                  <li class="mb-0 col">Mid Beach</li>
+                  <li class="mb-0 col">Miami, FL</li>
+                  <li class="mb-0 col">Edgewater</li>
+                  <li class="mb-0 col">Brickell</li>
+                  <li class="mb-0 col">Downtown Miami</li>
+                  <li class="mb-0 col">Miami Design District</li>
+               </ul>
             </div>
 
 
