--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
             <div class="col-md-4 pull-md-6 office-label py-3">
                <p class="label-title office-label-title">Service Areas</p>
-               <ul class="list-unstyled d-flex">
+               <ul class="list-unstyled row">
                   <li class="mb-0 col">Miami Beach, FL</li>
                   <li class="mb-0 col">South Beach</li>
                   <li class="mb-0 col">Sunset Harbor</li>
