--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <meta name="author" content="Digimix">
 
       <title>Pup Bestie</title>
-      <meta name="description" content="Pup Bestie is a New York-based private equity firm. The firm manages a diversified portfolio of investments and is actively investing.">
+      <meta name="description" content="Miami Beach based petcare. Dog walking, dog sitting, dog boarding, cat sitting, cat boarding in Miami Beach, South Beach, South of Fifth, Sunset Harbor, downtown Miami, Midtown, Edgewater and Brickell.">
 
       <meta name="keywords" lang="fr" content="New York, private equity firm, private equity, global, firm, diversified portfolio, portfolio, investments, investments portfolio, actively investing">
       <link rel="canonical" href="https://pupbestie.com/">
